# monocle

./: default.nix  tftp.bash
monocle/: Cargo.nix  Cargo.toml  default.nix
monocle/res/: count-sensitivity-vs-wavelength.csv
monocle/src/: adaptive.rs  api.rs  calibrate.rs  capture.rs  client.rs  goto.rs  gpio.rs  lasso.rs  lcd.rs  lib.rs  mailbox.rs  main.rs  mask.rs  pantilt.rs  quantity.rs  registers.rs  rotation.rs  scanline.rs  sep.rs  server.rs  tracking.rs
nix/: common.nix  modulator.edid  sources.json  telescope.nix
vpu-blobs/: Makefile  default.nix  vpu-blobs.S
