[package]
name = "monocle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "*"
chrono = "*"
chrono-tz = "*"
memmap = "*"
nix = "*"
#tock-registers = "*"
#byteorder = "*"
serial = "*"
#liblinear = "*"
scan_fmt = "*"
#libsvm = "*"
linfa = { version = "*", features = ["intel-mkl-system"] }
linfa-elasticnet = "*"
#linfa-datasets = { version = "*", features = ["diabetes"] }
ndarray = "*"
ndarray-linalg = "*"
libc = "*"
rand = "*"